[package]
name = "cctx"
version = "0.1.0"
edition = "2021"
authors = ["nwiizo <syu.m.5151@gmail.com>"]
description = "Claude Code context manager for switching between multiple settings.json configurations"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
colored = "2.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
which = "6.0"