[package]
name = "cctx"
version = "0.1.6"
edition = "2021"
rust-version = "1.81"
authors = ["nwiizo <syu.m.5151@gmail.com>"]
description = "Claude Code context manager for switching between multiple settings.json configurations"
license = "MIT"
repository = "https://github.com/nwiizo/cctx"
homepage = "https://github.com/nwiizo/cctx"
readme = "README.md"
keywords = ["claude", "claude-code", "context", "cli", "config"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
colored = "2.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
which = "6.0"
chrono = "0.4"